templates/datastax-ddac-master-no-vpc.template.yaml
---
AWSTemplateFormatVersion: 2010-09-09
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: ' VPC Network Configuration'
        Parameters:
          - VPCId
          - VPCCIDR
          - PrivateSubnet1ID
          - PrivateSubnet2ID
          - PrivateSubnet3ID
          - RemoteAccessCIDR
          - PublicSubnet1ID
          - PublicSubnet2ID
          - PublicSubnet3ID
      - Label:
          default: 'DDAC Cluster/Nodes Configuration'
        Parameters:
          - ClusterName
          - DatacenterName
          - CreateClusterWithPublicIP
          - DDACInstanceType
          - DDACVolumeSize
          - ClusterAutoScaleMinSize
          - ClusterAutoScaleMaxSize
          - EmailAddress
      - Label:
          default: 'DevOps/Bastion Configuration'
        Parameters:
          - DevInstanceType
          - DevVolumeSize
          - KeyPairName
      - Label:
          default: 'Quick Start Configuration'
        Parameters:
          - QSS3BucketName
          - QSS3KeyPrefix
    ParameterLabels:
      ClusterName:
        default: Name of the DDAC Cluster
      DatacenterName:
        default: Name of the Datacenter
      RemoteAccessCIDR:
        default: Permitted IP range
      KeyPairName:
        default: Key Name
      DDACInstanceType:
        default: Instances Type for DDAC nodes
      QSS3BucketName:
        default: Quick Start S3 Bucket Name
      QSS3KeyPrefix:
        default: Quick Start S3 Key Prefix
Parameters:
  EmailAddress:
    AllowedPattern: "([a-zA-Z0-9_\\-\\.]+)@((\\[[0-9]{1,3}\\.[0-9]{1,3}\\.[0-9]{1,3}\\.)|(([a-zA-Z0-9\\-]+\\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})(\\]?)"
    ConstraintDescription: "Must be a valid email id."
    Description: "Email Address for notification"
    Type: String
  ClusterName:
    Description: The name of the DDAC Cluster.
    Type: String
    Default: DDAC-Cluster
  DatacenterName:
    Description: The name of the DDAC Datacenter.
    Type: String
    Default: DDAC-dc0
  DDACInstanceType:
    AllowedValues:
      - m4.large
      - m4.xlarge
      - m4.2xlarge
      - m4.4xlarge
      - m4.10xlarge
      - m4.16xlarge
    ConstraintDescription: "must be a valid EC2 instance type."
    Default: m4.large
    Description: "EC2 instance type"
    Type: String
  DDACVolumeSize:
      Type: Number
      Description: "EBS volume size of the DDAC Cluster Nodes in GB"
      Default: 1024
  DevInstanceType:
    AllowedValues:
      - t2.micro
      - t2.small
      - t2.medium
      - t2.large
      - m4.large
      - m4.xlarge
      - m4.2xlarge
      - m4.4xlarge
      - m4.10xlarge
      - c4.large
      - c4.xlarge
      - c4.2xlarge
      - c4.4xlarge
      - c4.8xlarge
      - r4.large
      - r4.xlarge
      - r4.2xlarge
      - r4.4xlarge
      - r4.8xlarge
    ConstraintDescription: "must be a valid EC2 instance type."
    Default: t2.medium
    Description: "EC2 instance type"
    Type: String
  DevVolumeSize:
      Type: Number
      Description: "EBS volume size of the DevOps Instance in GB"
      Default: 16
  KeyPairName:
    ConstraintDescription: "Name of an existing EC2 KeyPair."
    Type: "AWS::EC2::KeyPair::KeyName"
  VPCId:
    Description: Id of existing VPC
    Type: AWS::EC2::VPC::Id
    Default: vpc-029d783ceaeadc765
  VPCCIDR:
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.0.0.0/16
    Description: CIDR block for the VPC
    Type: String
  PublicSubnet1ID:
    Type: AWS::EC2::Subnet::Id
    Default: subnet-00ce98dfa31f7754a
    Description: Public subnet id 1
  PublicSubnet2ID:
    Type: AWS::EC2::Subnet::Id
    Default: subnet-0559e23084761f2d6
    Description: Public subnet id 2
  PublicSubnet3ID:
    Type: AWS::EC2::Subnet::Id
    Default: subnet-0ba670afbcc2dddbf
    Description: Public subnet id 3
  PrivateSubnet1ID:
    Type: AWS::EC2::Subnet::Id
    Default: subnet-0fa5cb58014342bb8
    Description: Private subnet id 1
  PrivateSubnet2ID:
    Type: AWS::EC2::Subnet::Id
    Default: subnet-055e606fa49f4cbbd
    Description: Private subnet id 2
  PrivateSubnet3ID:
    Type: AWS::EC2::Subnet::Id
    Default: subnet-05697c5984fe76116
    Description: Private subnet id 3
  QSS3BucketName:
    AllowedPattern: "^[0-9a-zA-Z]+([0-9a-zA-Z-]*[0-9a-zA-Z])*$"
    ConstraintDescription: "Quick Start bucket name can include numbers, lowercase letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen (-)."
    Default: aws-quickstart
    Description: "S3 bucket name for the Quick Start assets. Quick Start bucket name can include numbers, lowercase letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen (-)."
    Type: String
  QSS3KeyPrefix:
    AllowedPattern: "^[0-9a-zA-Z-/]*$"
    ConstraintDescription: "Quick Start key prefix can include numbers, lowercase letters, uppercase letters, hyphens (-), and forward slash (/)."
    Default: quickstart-datastax-ddac/
    Description: "S3 key prefix for the Quick Start assets. Quick Start key prefix can include numbers, lowercase letters, uppercase letters, hyphens (-), and forward slash (/)."
    Type: String
  RemoteAccessCIDR:
    AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/([0-9]|[1-2][0-9]|3[0-2]))$"
    ConstraintDescription: "CIDR block parameter must be in the form x.x.x.x/x"
    Description: "Allowed CIDR block for external SSH access"
    Type: String
  ClusterAutoScaleMinSize:
    Description: "The minimum number of DDAC nodes to create (including 2 seed nodes)."
    Type: String
    Default: "3"
    AllowedValues:
      [
        "3",
        "4",
        "5",
        "6"
      ]
    ConstraintDescription: "Value must be between 3-6"
  ClusterAutoScaleMaxSize:
    Description: "The maximum number of DDAC nodes to auto scale (including 2 seed nodes)."
    Type: String
    Default: "6"
    AllowedValues:
      [
        "3",
        "4",
        "5",
        "6"
      ]
    ConstraintDescription: "Value must be an between 3-6"
  CreateClusterWithPublicIP:
    Description: "Whether to create the DDAC Cluster nodes in public subnet"
    Type: String
    Default: "false"
    AllowedValues:
      - "false"
      - "true"
Conditions:
  GovCloudCondition: !Equals
    - !Ref "AWS::Region"
    - us-gov-west-1
  CreateInPublicSubnet: !Equals
    - !Ref CreateClusterWithPublicIP
    - true
Resources:
  DDACSecGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enables SSH access and 8080.
      VpcId: !Ref VPCId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref RemoteAccessCIDR
        - IpProtocol: tcp
          FromPort: 0
          ToPort: 65535
          CidrIp: !Ref VPCCIDR
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0
  SeedNodeStack:
    Type: AWS::CloudFormation::Stack
    Properties:
      TemplateURL:
        Fn::Sub:
          - https://${QSS3BucketName}.${S3Region}.amazonaws.com/${QSS3KeyPrefix}templates/seednodes.yaml.template
          - S3Region: !If [GovCloudCondition, s3-us-gov-west-1, s3]
      Parameters:
        ClusterName: !Ref ClusterName
        DatacenterName: !Ref DatacenterName
        CreateClusterWithPublicIP: !Ref CreateClusterWithPublicIP
        Subnet1ID: !If [CreateInPublicSubnet, !Ref PublicSubnet1ID, !Ref PrivateSubnet1ID]
        Subnet2ID: !If [CreateInPublicSubnet, !Ref PublicSubnet2ID, !Ref PrivateSubnet2ID]
        InstanceType: !Ref DDACInstanceType
        VolumeSize: !Ref DDACVolumeSize
        KeyPairName: !Ref KeyPairName
        QSS3KeyPrefix: !Ref QSS3KeyPrefix
        QSS3BucketName: !Ref QSS3BucketName
        DDACSecGroup: !GetAtt DDACSecGroup.GroupId
  DevNodeStack:
    Type: AWS::CloudFormation::Stack
    Properties:
      TemplateURL:
        Fn::Sub:
          - https://${QSS3BucketName}.${S3Region}.amazonaws.com/${QSS3KeyPrefix}templates/dev.yaml.template
          - S3Region: !If [GovCloudCondition, s3-us-gov-west-1, s3]
      Parameters:
        PublicSubnet1ID: !Ref PublicSubnet1ID
        InstanceType: !Ref DevInstanceType
        VolumeSize: !Ref DevVolumeSize
        KeyPairName: !Ref KeyPairName
        QSS3BucketName: !Ref QSS3BucketName
        DDACSecGroup: !GetAtt DDACSecGroup.GroupId
  ClusterNodeStack:
    Type: AWS::CloudFormation::Stack
    Properties:
      TemplateURL:
        Fn::Sub:
          - https://${QSS3BucketName}.${S3Region}.amazonaws.com/${QSS3KeyPrefix}templates/datastax-ddac-clusternode.template.yaml
          - S3Region: !If [GovCloudCondition, s3-us-gov-west-1, s3]
      Parameters:
        ClusterName: !Ref ClusterName
        DatacenterName: !Ref DatacenterName
        EmailAddress: !Ref EmailAddress
        InstanceType: !Ref DDACInstanceType
        VolumeSize: !Ref DDACVolumeSize
        KeyPairName: !Ref KeyPairName
        Subnet1ID: !If [CreateInPublicSubnet, !Ref PublicSubnet1ID, !Ref PrivateSubnet1ID]
        Subnet2ID: !If [CreateInPublicSubnet, !Ref PublicSubnet2ID, !Ref PrivateSubnet2ID]
        Subnet3ID: !If [CreateInPublicSubnet, !Ref PublicSubnet3ID, !Ref PrivateSubnet3ID]
        QSS3BucketName: !Ref QSS3BucketName
        QSS3KeyPrefix: !Ref QSS3KeyPrefix
        ClusterAutoScaleMinSize: !Ref ClusterAutoScaleMinSize
        ClusterAutoScaleMaxSize: !Ref ClusterAutoScaleMaxSize
        DDACSecGroup: !GetAtt DDACSecGroup.GroupId
        SeedNodeIps:
          !Join [
            ",",
            [
              !GetAtt SeedNodeStack.Outputs.Seed1PrivateIpAddress,
              !GetAtt SeedNodeStack.Outputs.Seed2PrivateIpAddress,
            ],
          ]
Outputs:
  Seed1PrivateIpAddress:
    Value: !GetAtt
      - SeedNodeStack
      - Outputs.Seed1PrivateIpAddress
    Description: 1st Seed Private IP
  Seed1PublicIpAddress:
    Value: !GetAtt
      - SeedNodeStack
      - Outputs.Seed1PublicIpAddress
    Description: 1st Seed Public IP
  Seed2PrivateIpAddress:
    Value: !GetAtt
      - SeedNodeStack
      - Outputs.Seed2PrivateIpAddress
    Description: 2nd Seed Private IP
  Seed2PublicIpAddress:
    Value: !GetAtt
      - SeedNodeStack
      - Outputs.Seed2PublicIpAddress
    Description: 2nd Seed Public IP
  DevIpAddress:
    Value: !GetAtt DevNodeStack.Outputs.DevIpAddress
    Description: Dev Jump box Public IP
  DDACUrl:
#    Value: !GetAtt DevNodeStack.Outputs.DDACUrl
    Value: "http://ddac-web.us-east-2.elasticbeanstalk.com/"
    Description: DDAC Url
